// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. date and times publication 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "textAlign": "left",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={Object {}}
      testID="date-time"
    >
      Saturday July 01 2017, 3.32pm BST
    </Text>
    <Text
      allowFontScaling={false}
      style={Object {}}
      testID="publication-name"
    >
      , The Times
    </Text>
  </Text>
</View>
`;

exports[`2. date and sundaytimes publication 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "textAlign": "left",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={Object {}}
      testID="date-time"
    >
      Saturday July 01 2017, 3.32pm BST
    </Text>
    <Text
      allowFontScaling={false}
      style={Object {}}
      testID="publication-name"
    >
      , The Sunday Times
    </Text>
  </Text>
</View>
`;

exports[`3. date and no given publication 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "textAlign": "left",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={Object {}}
      testID="date-time"
    >
      Saturday July 01 2017, 3.32pm BST
    </Text>
  </Text>
</View>
`;

exports[`4. date and no day 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "textAlign": "left",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={Object {}}
      testID="date-time"
    >
      July 01 2017, 3.32pm BST
    </Text>
  </Text>
</View>
`;
